@@ -67,6 +67,7 @@ Detailed changes:
 	- FIXED: Vector3RotateByAxisAngle was not connected.
 	- FIXED: uluaGetBoundingBoxIndex was looking for numbers instead of tables.
 	- ADDED: IsTextureReady
+	- FIXED: UnloadTexture did not set texture id to NULL.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.4.0		Using Raylib 4.2
